--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Startovací projekt JavaScript 2</title>
+  <title>Zahradní plánovač</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>Startovací projekt JavaScript #2</h1>
+  <h1>Zahradní plánovač</h1>
+
+  <!-- Do tohoto div se bude generovat HTML se seznamem zeleniny-->
+  <div id="detail"></div>
 
   <!--
     Složka /dist a soubor app.bundle.js v prázdném projektu
