--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <body>
 
   <h1>Zahradní plánovač pro <span id="mesto"></span></h1>
-  <div id="pocasi"></div>
   
   <table>
       <tr>
-          <td>Počasí:</td>
+          <td>Aktuální počasí:</td>
           <td id="pocasi"></td>
           <td><img id="icon"></td>
       </tr>
@@ -23,9 +22,17 @@
           <td id="teplota"></td>
       </tr>
   </table>
+
+  <h2>Předpověď počasí</h2>
+  <table id="forecast">
+  </table>
+
+  <!-- vygeneruje HTML se seznamem zeleniny, kterou jsem si vybrala-->
+  <button onclick="mujVyber()">Moje zelenina</button>
    
 
   <!-- Do tohoto div se bude generovat HTML se seznamem zeleniny-->
+  <div id="vysledek"></div>
   <div id="detail"></div>
 
   <!--
