--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <h1>Zahradní plánovač pro <span id="mesto"></span></h1>
   
+  <h2>Aktuální počasí</h2>
   <table>
       <tr>
-          <td>Aktuální počasí:</td>
           <td id="pocasi"></td>
           <td><img id="icon"></td>
       </tr>
@@ -27,8 +27,9 @@
   <table id="forecast">
   </table>
 
-  <!-- vygeneruje HTML se seznamem zeleniny, kterou jsem si vybrala-->
+  <!-- vygeneruje HTML se seznamem zeleniny, kterou jsem si vybrala
   <button onclick="mujVyber()">Moje zelenina</button>
+-->
    
 
   <!-- Do tohoto div se bude generovat HTML se seznamem zeleniny-->
